# kde-oom-killer

./: Cargo.toml  README.md  _detect.sh  install.sh  uninstall.sh  update.sh
sounds/: kill.oga  warning.oga
src/: config.rs  history.rs  log_capture.rs  main.rs  monitor.rs  settings.rs  sound.rs  tray.rs
src/desktop/: fallback.rs  mod.rs  sni.rs
